new file:   clockin_dev.sql

--- a/签到系统需求说明文档.md
+++ b/签到系统需求说明文档.md
@@ -4,6 +4,10 @@
 
 **系统任务需求：**
 
+- 对每一个用户进行出勤统计
+
+**用户需求**
+
 - 用户进行签到
 - 用户登陆注册
 - 用户信息编辑
@@ -111,5 +115,69 @@
 | 描述           | 管理员通过本例查看用户签到记录   |
 | 前置条件       | 系统页面已打开                   |
 | 触发条件       | 用户点击登陆                     |
-| 主事件流       | 1查询最近一周签到记录<br>        |
+| 主事件流       | 查询最近一周签到记录<br>         |
 | 后置条件       | 将用户签到记录显示在管理员页面上 |
+
+
+
+### **数据库设计**
+
+| 序号 | 表名        | 中文名 |
+| ---- | ----------- | ------ |
+| 1    | user        | 用户表 |
+| 2    | admin       | 管理员 |
+| 3    | recodr_From | 签到表 |
+| 4    | department  | 部门表 |
+
+#### 1.user
+
+| 字段名     | 数据类型    | 说明     | 备注        |
+| ---------- | ----------- | -------- | ----------- |
+| id         | bigint      | 主键     | 自增        |
+| name       | varchar(32) | 姓名     |             |
+| username   | varchar(32) | 用户名   | 唯一        |
+| password   | varchar(64) | 密码     |             |
+| phone      | varchar(11) | 手机号   |             |
+| department | int         | 部门     | 外键        |
+| grade      | varchar(2)  | 年级     |             |
+| sno        | varchar(8)  | 学号     | 唯一        |
+| major      | varchar(16) | 专业     |             |
+| status     | int         | 账号状态 | 1正常 0锁定 |
+| sex        | varchar(2)  | 性别     |             |
+| image      | varchar(32) | 头像路径 |             |
+
+
+
+#### 2. admin
+
+| 字段名     | 数据类型    | 说明 | 备注     |
+| ---------- | ----------- | ---- | -------- |
+| username   | varchar(32) | 主键 | 自增     |
+| password   | varchar(32) | 密码 |          |
+| nickname   | varchar(16) | 昵称 |          |
+| department | id          | 外键 | 部门表id |
+
+
+
+### 3. recodr_from
+
+| 字段名    | 数据类型    | 说明     | 备注       |
+| --------- | ----------- | -------- | ---------- |
+| id        | bigint      | 主键     |            |
+| user      | int         | 外键     | 用户表id   |
+| in_time   | datatime    | 签入时间 |            |
+| type      | varchar(16) | 签到类型 |            |
+| out_time  | datatime    | 签出时间 |            |
+| carry_key | varchar(4)  | 携带钥匙 |            |
+| version   | int         | 版本     | 用作乐观锁 |
+
+
+
+#### 4. department
+
+| 字段名  | 数据类型    | 说明     | 备注     |
+| :------ | ----------- | -------- | -------- |
+| id      | int         | 主键     | 自增     |
+| dname   | varchar(16) | 部门名称 |          |
+| dleader | bigint      | 外键     | 用户表id |
+
