活动图已完成

--- a/签到系统需求说明文档.md
+++ b/签到系统需求说明文档.md
@@ -152,7 +152,8 @@
 
 | 字段名     | 数据类型    | 说明 | 备注     |
 | ---------- | ----------- | ---- | -------- |
-| username   | varchar(32) | 主键 | 自增     |
+| aid        | int         | 主键 | 自增     |
+| username   | varchar(32) | 账号 |          |
 | password   | varchar(32) | 密码 |          |
 | nickname   | varchar(16) | 昵称 |          |
 | department | id          | 外键 | 部门表id |
